# Pharming

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  README.md  pharming.yml  pyproject.toml  tutorial.ipynb
analysis/: decifer_analysis.R
analysis/scripts/simulation/: obj1_analysis.R
clonelib/: clonelib.cpp
dlp/: bysample.smk  bysample.yml  copy_profiles.imputed.csv  counts.csv  prep.R  segmentation.csv  segments.bin.mapping.csv
dlp/scripts/: prep.R
example/: copy_numbers.csv  dcfs.txt  gt2.pickle  read_counts.tsv  segment_csv.csv  snv_csv.csv  solutions.pkl
example/output/: pred_cell.csv  pred_genos.csv  pred_likelihood.csv  pred_mut.csv  pred_mut_loss.csv  pred_tree.txt
pharming/: cell_mapping.py  clonal_tree.py  cmb.py  cna_merge.py  dcf_clustering_v2.py  draw_pretty_tree.py  enumerate.py  genotype_tree.py  main.py  make_data.py  pharming.py  solution.py  sti_v2.py  tree_merging.py  utils.py
pharming/clonelib/: clonelib.cpp
sim_study/: Snakefile  config.yaml
simulation_study/: Score_Analysis.R  Snakefile  config.yml  dcf_clustering.smk  dcf_clustering.yml  decifer.smk  pharming.smk  pharming.yml  phertilizer.smk  purity.tsv  sims.yml  simulate.smk  simulate.yml  test.yml
simulation_study/Rscripts/: Score_Analysis.R
simulation_study/cpp/: CMakeLists.txt  main.cpp
simulation_study/scripts/: metric_headers.csv
src/: baseline_method.py  cell_assign_evol.py  cell_assignment_problem.py  cell_mapping.py  clonal_tree.py  clonal_tree_new.py  clonal_tree_old.py  cmb.py  cna_merge.py  compare_obj_func.py  constrained_cell_assignment.py  convert_lazac_to_pharming.py  convert_phert_to_pharm.py  convert_scite_to_pharming.py  data.py  dcf_clustering.py  dcf_clustering_eval.py  dcf_clustering_v2.py  decifer_post_process.py  entropy_segments.py  enumerate.py  fit_segment_tree.py  genotype.py  genotype_tree.py  get_dcfs.py  get_gt.py  ground_truth_clonal_tree.py  json_main.py  main.py  make_data.py  merge_segtrees.py  pharming.py  pharming_old.py  prep_decifer.py  prep_phertilizer.py  preprocess.py  preprocess_sim_data.py  score_phertilizer.py  score_tree.py  segment_genome.py  (+14 more)
src/archive/: segment_tree_operations.py  superimposition.py
