[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pharming"
version = "0.1.0"
description = "A package to build a joint CNA and SNV clonal tree from  low pass scDNA-seq data"
dependencies = [
    "numpy",
    "networkx",
    "pandas",
    "scipy",
]

[project.scripts]
pharming = "pharming.main:main"
pharming-data = "pharming.make_data:main"



[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"




